Trying to test Search Games function

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
             <a href = "/" id = "currentPage">Home</a>
             <a href = "/create_account">Create Account</a>
             <a href = "/login">Login</a>
+            <a href = "/searchGames">Search Games</a>
         </div>   
     </div>
     
