--- a/views/create_account.ejs
+++ b/views/create_account.ejs
@@ -8,6 +8,8 @@
       <a href = "/">Home</a>
       <a href = "/create_account" id = "currentPage">Create Account</a>
       <a href = "/login">Login</a>
+      <a href = "/search">Search</a>
+      <a href = "/cart">Cart</a>
     </div>   
 </div>
 
