--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,7 @@
       <a href = "/" >Home</a>
       <a href = "/create_account">Create Account</a>
       <a href = "/login">Login</a>
+      <a href = "/search">Search</a>
     </div>   
 </div>
 
