--- a/views/user.ejs
+++ b/views/user.ejs
@@ -17,8 +17,29 @@
         <div class='jumbotron'>
             <div align='center'>
                 <strong>
-                    <p>Your account!</p>    
+                    <p>Your information:</p>
+                    <br>
+                    <p>First Name: <%=username%></p>
+                    <p>Last Name: <%=last%></p>
+                    <p>Username: <%=user%></p>
+                    <p>Password: hidden</p>
                 </strong>
+                <div class='form-group row'>
+                <div class='col-sm-4'></div>
+                <div class='col-sm-4'>
+                    <a type="button" class="text-light btn btn-warning" href="/cart" >Your items!</a>
+                </div>
+                <div class='col-sm-4'></div>
+                </div>
+                
+                <div class='form-group row'>
+                <div class='col-sm-4'></div>
+                <div class='col-sm-4'>
+                    <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
+                </div>
+                <div class='col-sm-4'></div>
+                </div>
+                
             </div>
             </br>
         </div>
