a lot of changes

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -6,10 +6,10 @@
     </div>
     <div class="topnav">
       <a href = "/">Home</a>
-      <a href = "/create_account" id = "currentPage">Create Account</a>
-      <a href = "/login">Login</a>
+      <a href="/user">User Account</a>
       <a href = "/search">Search</a>
       <a href = "/cart">Cart</a>
+      <a href="/logout">Log Out</a>
     </div>   
 </div>
 
