--- a/views/homeSignedIn.ejs
+++ b/views/homeSignedIn.ejs
@@ -8,9 +8,10 @@
         </div>
         <div class="topnav">
             <a href = "/" id = "currentPage">Home</a>
-            <a href = "/create_account">Create Account</a>
-            <a href="/logout">Log Out</a>
             <a href="/user">User Account</a>
+            <a href="/search">Search</a>
+            <a href="/cart">Cart</a>
+            <a href="/logout">Log Out</a>
         </div>   
     </div>
     
