--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -23,4 +23,19 @@
     </div>
 </div>
 
+ <%gamesInfo.forEach(function(games){%>
+            
+            <figure id="results">
+            <img src='<%=games.image%>' width='200' id="images">
+            <h5>Game Name: <%=games.name%></h5>
+            <h5>Year Made: <%=games.yearMade%></h5>
+            <h5>Genre: <%=games.genre%></h5>
+            <h5>Summary: <%=games.summary%></h5>
+        
+            <a href='/cart/<%=games.gameId%>/delete'>Delete</a>
+            <br>
+            </figure>
+            
+        <%});%>
+
 <%- include ('partials/footer'); -%>
