--- a/views/homeSignedIn.ejs
+++ b/views/homeSignedIn.ejs
@@ -10,7 +10,7 @@
             <a href = "/" id = "currentPage">Home</a>
             <a href = "/create_account">Create Account</a>
             <a href="/logout">Log Out</a>
-            <a href="/user">User Account</a>
+            <a href="/user">User Accoutn</a>
         </div>   
     </div>
     
