--- a/views/user.ejs
+++ b/views/user.ejs
@@ -24,6 +24,18 @@
                     <p>Username: <%=user%></p>
                     <p>Password: hidden</p>
                 </strong>
+                
+                <div class='form-group row'>
+                <div class='col-sm-4'></div>
+                <div class='col-sm-4'>
+                    
+                    <!--<a class="text-light btn btn-warning" href="/edit">Edit</a>-->
+                    
+                    <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
+                </div>
+                <div class='col-sm-4'></div>
+                </div>
+                
                 <div class='form-group row'>
                 <div class='col-sm-4'></div>
                 <div class='col-sm-4'>
@@ -35,10 +47,12 @@
                 <div class='form-group row'>
                 <div class='col-sm-4'></div>
                 <div class='col-sm-4'>
-                    <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
+                    <a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>
                 </div>
                 <div class='col-sm-4'></div>
                 </div>
+                
+                
                 
             </div>
             </br>
