pushing to my branch

--- a/views/homeSignedIn.ejs
+++ b/views/homeSignedIn.ejs
@@ -10,6 +10,8 @@
             <a href = "/" id = "currentPage">Home</a>
             <a href = "/create_account">Create Account</a>
             <a href="/logout">Log Out</a>
+            <a href = "/cart">Cart</a>
+            <a href="/user">User Account</a>
         </div>   
     </div>
     
