a lot of shit changed

--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -29,6 +29,11 @@
 	</div>
 	</br>
     </br>
+    <form action="/cart/<%=title.gameId%>/add" method="GET">
+            
+			<button class='btn btn-primary btn-block'>Add to Cart</button>
+			
+	</form>
 </div>
 
 </br>
