changed some user account stuff

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <div class = 'footer'>
     <hr>
         <center>
-        <h6> By Goup 2</h6>
+        <h6> By Group 2</h6>
         </center>
       </div>
       </body>
