--- a/views/user.ejs
+++ b/views/user.ejs
@@ -19,8 +19,8 @@
                 <strong>
                     <p>Your information:</p>
                     <br>
-                    <p>First Name: <%=username%></p>
-                    <p>Last Name: <%=last%></p>
+                    <p>First Name: <%=firstname%></p>
+                    <p>Last Name: <%=lastname%></p>
                     <p>Username: <%=user%></p>
                     <p>Password: hidden</p>
                 </strong>
