--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -40,7 +40,7 @@
 				<div class='form-group row'>
 					<label for='password' class='col-sm-4 col-form-label'>PASSWORD</label>
 					<div class='col-sm-4'>
-						<input type='text' class='form-control' id='password' name='password' placeholder='<%=muser.password%>' required>
+						<input type='text' class='form-control' id='password' name='password' placeholder='hidden' required>
 					</div>
 				</div>
 				
