--- a/views/user.ejs
+++ b/views/user.ejs
@@ -17,63 +17,34 @@
         <div class='jumbotron'>
             <div align='center'>
                 <strong>
+                    
+                    <div class='form-group row'>
+                <div class='col-sm-3'></div>
+                <div class='col-sm-6'>
+
+                    <!--<a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>-->
+                    <a type="button" class="text-light btn btn-warning" href="/cart" >Your items!</a>
+
+                    <a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>
+                    
+                    <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
+
+
+                </div>
+                <div class='col-sm-4'></div>
+                </div>
+                    
                     <p>Your information:</p>
                     <br>
-<<<<<<< HEAD
-=======
 
->>>>>>> master
-                    <p>First Name: <%=username%></p>
-                    <p>Last Name: <%=last%></p>
+                    <p>First Name: <%=firstname%></p>
+                    <p>Last Name: <%=lastname%></p>
                     <p>Username: <%=user%></p>
                     <p>Password: hidden</p>
                 </strong>
                 
-                <div class='form-group row'>
-                <div class='col-sm-4'></div>
-                <div class='col-sm-4'>
-                    
-                    <!--<a class="text-light btn btn-warning" href="/edit">Edit</a>-->
-                    
-                    <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
-                </div>
-                <div class='col-sm-4'></div>
-                </div>
-                
-<<<<<<< HEAD
-=======
+               
 
->>>>>>> master
-                <div class='form-group row'>
-                <div class='col-sm-4'></div>
-                <div class='col-sm-4'>
-                    <a type="button" class="text-light btn btn-warning" href="/cart" >Your items!</a>
-                </div>
-                <div class='col-sm-4'></div>
-                </div>
-                
-                <div class='form-group row'>
-                <div class='col-sm-4'></div>
-                <div class='col-sm-4'>
-<<<<<<< HEAD
-                    <a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>
-=======
-
-                    <a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>
-                    
-                    <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
-
->>>>>>> master
-                </div>
-                <div class='col-sm-4'></div>
-                </div>
-                
-<<<<<<< HEAD
-                
-                
-=======
-
->>>>>>> master
             </div>
             </br>
         </div>
