--- a/views/create_account.ejs
+++ b/views/create_account.ejs
@@ -6,7 +6,7 @@
     </div>
     <div class="topnav">
       <a href = "/">Home</a>
-      <a href = "/create_account" id = "currentPage">Create Account</a>
+      <a href = "/create_account" id = "currentPage"><strong>Create Account</strong></a>
       <a href = "/login">Login</a>
     </div>   
 </div>
