--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
             <h1 style='font-size: 60px'>Video Game Store</b></h1>
         </div>
         <div class="topnav">
-            <a href = "/" id = "currentPage">Home</a>
+            <a href = "/" id = "currentPage"><strong>Home</strong></a>
             <a href = "/create_account">Create Account</a>
             <a href = "/login">Login</a>
         </div>   
