--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     <div class="topnav">
       <a href = "/" >Home</a>
       <a href = "/create_account">Create Account</a>
-      <a href = "/login">Login</a>
+      <a href = "/login"><strong>Login</strong></a>
       
     </div>   
 </div>
