--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,6 @@
 <div class = 'footer'>
+    </body>
     <hr>
-        <center>
-        <h6> By Group 2</h6>
-        </center>
       </div>
-      </body>
+      </div>
 </html>
