--- a/views/user.ejs
+++ b/views/user.ejs
@@ -2,13 +2,14 @@
 
     <div>
         <div class="header">
-            <h1 style='font-size: 60px'>User Account</b></h1>
-            <h4>Signed in as <%=user%></h4>
+            <h1 style='font-size: 60px'>Video Game Store</b></h1>
         </div>
         </div>
         <div class="topnav">
             <a href = "/" id = "currentPage">Home</a>
-            <a href = "/create_account">Create Account</a>
+            <a href="/user"><strong>User Account</strong></a>
+            <a href="/search">Search</a>
+            <a href="/cart">Cart</a>
             <a href="/logout">Log Out</a>
         </div>   
     </div>
