--- a/views/homeSignedIn.ejs
+++ b/views/homeSignedIn.ejs
@@ -5,16 +5,15 @@
             <h1 style='font-size: 60px'>Video Game Store</b></h1>
             <h4>Signed in as <%=user%></h4>
         </div>
-        </div>
         <div class="topnav">
-            <a href = "/" id = "currentPage">Home</a>
+            <a href = "/" id = "currentPage"><strong>Home</strong></a>
             <a href="/user">User Account</a>
             <a href="/search">Search</a>
             <a href="/cart">Cart</a>
             <a href="/logout">Log Out</a>
         </div>   
-    </div>
-    
+    </div> 
+
     <div class='container'>
         <div class='jumbotron'>
             <div align='center'>
