--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,3 +8,4 @@
 	  <link rel='stylesheet' type='text/css' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
 	  <link rel='stylesheet' type='text/css' href='app.css'>
   </head>
+  <body id="wallpaper">
