--- a/views/search.ejs
+++ b/views/search.ejs
@@ -7,8 +7,8 @@
         <div class="topnav">
             <a href = "/" id = "currentPage">Home</a>
             <a href="/user">User Account</a>
-            <a href = "/search">Search</a>
-            <a href = "/cart">Cart</a>
+            <a href="/search"><strong>Search</strong></a>
+            <a href="/cart">Cart</a>
             <a href="/logout">Log Out</a>
         </div>   
     </div>
