--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <div>
     <div class="header">
-        <h1 style='font-size: 60px'>Login</h1>
+        <h1 style='font-size: 60px'>Video Game Store</h1>
     </div>
     <div class="topnav">
       <a href = "/" >Home</a>
