--- a/views/user.ejs
+++ b/views/user.ejs
@@ -2,14 +2,12 @@
 
     <div>
         <div class="header">
-            <h1 style='font-size: 60px'>Video Game Store</b></h1>
+            <h1 style='font-size: 60px'>User Account</b></h1>
+            <h4>Signed in as <%=user%></h4>
         </div>
         </div>
         <div class="topnav">
             <a href = "/" id = "currentPage">Home</a>
-            <a href="/user"><strong>User Account</strong></a>
-            <a href="/search">Search</a>
-            <a href="/cart">Cart</a>
             <a href="/logout">Log Out</a>
         </div>   
     </div>
@@ -18,47 +16,33 @@
         <div class='jumbotron'>
             <div align='center'>
                 <strong>
-                    <p>Your information:</p>
-                    <br>
-
-                    <p>First Name: <%=username%></p>
-                    <p>Last Name: <%=last%></p>
-                    <p>Username: <%=user%></p>
-                    <p>Password: hidden</p>
-                </strong>
-                
-                <div class='form-group row'>
-                <div class='col-sm-4'></div>
-                <div class='col-sm-4'>
                     
-                    <!--<a class="text-light btn btn-warning" href="/edit">Edit</a>-->
-                    
-                    <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
-                </div>
-                <div class='col-sm-4'></div>
-                </div>
-                
+                    <div class='form-group row'>
+                <div class='col-sm-3'></div>
+                <div class='col-sm-6'>
 
-                <div class='form-group row'>
-                <div class='col-sm-4'></div>
-                <div class='col-sm-4'>
+                    <!--<a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>-->
                     <a type="button" class="text-light btn btn-warning" href="/cart" >Your items!</a>
-                </div>
-                <div class='col-sm-4'></div>
-                </div>
-                
-                <div class='form-group row'>
-                <div class='col-sm-4'></div>
-                <div class='col-sm-4'>
 
                     <a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>
                     
                     <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
 
+
                 </div>
                 <div class='col-sm-4'></div>
                 </div>
+                    
+                    <p>Your information:</p>
+                    <br>
+
+                    <p>First Name: <%=firstname%></p>
+                    <p>Last Name: <%=lastname%></p>
+                    <p>Username: <%=user%></p>
+                    <p>Password: hidden</p>
+                </strong>
                 
+               
 
             </div>
             </br>
