--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -18,7 +18,13 @@
                     <p>Edit your account credentials.</p>    
                 </strong>
                 
-                <form action='/editInfo?_method=PUT' method='POST'>
+                <form action='/users/<%=userId%>?_method=PUT' method='POST'>
+				<div class='form-group row'>
+					<label for='firstname' class='col-sm-4 col-form-label'>User ID Num</label>
+					<div class='col-sm-4'>
+						<input type='text' class='form-control' id='userId' name='userId' placeholder='<%=userId%>' disabled>
+					</div>
+				</div>
 				<div class='form-group row'>
 					<label for='firstname' class='col-sm-4 col-form-label'>FIRST NAME</label>
 					<div class='col-sm-4'>
@@ -40,7 +46,7 @@
 				<div class='form-group row'>
 					<label for='password' class='col-sm-4 col-form-label'>PASSWORD</label>
 					<div class='col-sm-4'>
-						<input type='text' class='form-control' id='password' name='password' placeholder='<%=muser.password%>' required>
+						<input type='text' class='form-control' id='password' name='password' placeholder='<%=password%>' disabled>
 					</div>
 				</div>
 				
