--- a/views/user.ejs
+++ b/views/user.ejs
@@ -17,7 +17,7 @@
             <div align='center'>
                 <strong>
                     
-                    <div class='form-group row'>
+                <div class='form-group row'>
                 <div class='col-sm-3'></div>
                 <div class='col-sm-6'>
 
@@ -39,7 +39,7 @@
                     <p>First Name: <%=firstname%></p>
                     <p>Last Name: <%=lastname%></p>
                     <p>Username: <%=user%></p>
-                    <p>Password: hidden</p>
+                    <p>Password: <%=password%></p>
                 </strong>
                 
                
