put some top nav stuff back

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,8 +7,12 @@
         </div>
         </div>
         <div class="topnav">
-            <a href = "/" id = "currentPage">Home</a>
-        </div>   
+        <a href = "/" id = "currentPage">Home</a>
+        <a href="/user">User Account</a>
+        <a href="/search">Search</a>
+        <a href="/cart">Cart</a>
+        <a href="/logout">Log Out</a>
+    </div>  
     </div>
     
     <div class='container'>
