--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,5 +1,7 @@
 <%- include ('partials/header'); -%>
 
+<%- include ('partials/header'); -%>
+
     <div>
         <div class="header">
             <h1 style='font-size: 60px'>User Account</b></h1>
@@ -8,8 +10,11 @@
         </div>
         <div class="topnav">
             <a href = "/" id = "currentPage">Home</a>
+            <a href="/user"><strong>User Account</strong></a>
+            <a href="/search">Search</a>
+            <a href="/cart">Cart</a>
             <a href="/logout">Log Out</a>
-        </div>   
+        </div>
     </div>
     
     <div class='container'>
