changed some route stuff

--- a/public/app.css
+++ b/public/app.css
@@ -6,8 +6,8 @@
 }
 
 #wallpaper{
-  background-image: url("/img/310d4a2f36b4fe4a07a31f5f7759a4d3.jpg")!important;
-  background-size: 100%;
+  background-image: url("/img/wp2276152.jpg")!important;
+  background-size: 40%;
 }
 
 .footer{
