--- a/views/search.ejs
+++ b/views/search.ejs
@@ -3,6 +3,7 @@
     <div>
         <div class="header">
             <h1 style='font-size: 60px'>Video Game Store</b></h1>
+            <h4>Signed in as <%=user%></h4>
         </div>
         <div class="topnav">
             <a href = "/" id = "currentPage">Home</a>
