--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,12 +1,9 @@
 <%- include ('partials/header'); -%>
 
-<%- include ('partials/header'); -%>
-
     <div>
         <div class="header">
-            <h1 style='font-size: 60px'>User Account</b></h1>
+            <h1 style='font-size: 60px'>Video Game Store</b></h1>
             <h4>Signed in as <%=user%></h4>
-        </div>
         </div>
         <div class="topnav">
             <a href = "/" id = "currentPage">Home</a>
