adding db list of games

--- a/views/homeSignedIn.ejs
+++ b/views/homeSignedIn.ejs
@@ -10,6 +10,7 @@
             <a href = "/" id = "currentPage">Home</a>
             <a href="/user">User Account</a>
             <a href="/search">Search</a>
+            <a href="/gameList">Game List</a>
             <a href="/cart">Cart</a>
             <a href="/logout">Log Out</a>
         </div>   
