--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,13 +4,14 @@
     <div class="header">
         <h1 style='font-size: 60px'>Video Game Store</h1>
     </div>
-    <div class="topnav">
-        <a href = "/" id = "currentPage">Home</a>
-        <a href="/user">User Account</a>
-        <a href="/search">Search</a>
-        <a href="/cart"><strong>Cart</strong></a>
-        <a href="/logout">Log Out</a>
-    </div>  
+        <div class="topnav">
+            <a href = "/">Home</a>
+            <a href="/user">User Account</a>
+            <a href = "/search">Search</a>
+            <a href="/gameList">Game List</a>
+            <a href = "/cart"><strong>Cart</strong></a>
+            <a href="/logout">Log Out</a>
+        </div>  
 </div>
 
 <div class='container'>
