--- a/views/gameList.ejs
+++ b/views/gameList.ejs
@@ -2,13 +2,13 @@
 
 <div>
     <div class="header">
-        <h1 style='font-size: 60px'>Create New Account</h1>
+        <h1 style='font-size: 60px'>Video Game Store</h1>
     </div>
     <div class="topnav">
       <a href = "/">Home</a>
       <a href="/user">User Account</a>
       <a href = "/search">Search</a>
-      <a href="/gameList">Game List</a>
+      <a href="/gameList"><strong>Game List</strong></a>
       <a href = "/cart">Cart</a>
       <a href="/logout">Log Out</a>
     </div>   
