--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -3,17 +3,17 @@
     <div>
         <div class="header">
             <h1 style='font-size: 60px'>Video Game Store</b></h1>
-            <h4>Signed in as <%=user%></h4>
         </div>
         </div>
 
-<div class="topnav">
-            <a href = "/" id = "currentPage">Home</a>
-            <a href="/user">User Account</a>
-            <a href="/search"><strong>Search</strong></a>
-            <a href="/cart">Cart</a>
-            <a href="/logout">Log Out</a>
-        </div> 
+    <div class="topnav">
+      <a href = "/">Home</a>
+      <a href="/user">User Account</a>
+      <a href = "/search">Search</a>
+      <a href="/gameList">Game List</a>
+      <a href = "/cart">Cart</a>
+      <a href="/logout">Log Out</a>
+    </div> 
 
 <div class='container'>
     <div class='jumbotron'>
