--- a/views/user.ejs
+++ b/views/user.ejs
@@ -5,12 +5,13 @@
             <h1 style='font-size: 60px'>Video Game Store</b></h1>
             <h4>Signed in as <%=user%></h4>
         </div>
-        <div class="topnav">
-            <a href = "/" id = "currentPage">Home</a>
-            <a href="/user"><strong>User Account</strong></a>
-            <a href="/search">Search</a>
-            <a href="/cart">Cart</a>
-            <a href="/logout">Log Out</a>
+            <div class="topnav">
+                <a href = "/">Home</a>
+                <a href="/user"><strong>User Account</strong></a>
+                <a href = "/search">Search</a>
+                 <a href="/gameList">Game List</a>
+                <a href = "/cart">Cart</a>
+                <a href="/logout">Log Out</a>
         </div>
     </div>
     
