changed some css stuff

--- a/public/app.css
+++ b/public/app.css
@@ -1,5 +1,5 @@
 .container{
-    background-color: #CC5500;
+    background-color: #1661a8;
     padding-bottom: 5px;
     padding-top: 10px;
     opacity:0.97;
@@ -18,7 +18,7 @@
   padding: 60px;
   text-align: center;
   background: #CC5500;
-  color: black;
+  color: #edf6ff;
   opacity: 0.90;
 }
 
