added an RNG type route, edited database app.js, and added a couple of css effects.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
             <a href = "/" id = "currentPage"><strong>Home</strong></a>
             <a href = "/create_account">Create Account</a>
             <a href = "/login">Login</a>
+            <a href = "/search">Search</a>
         </div>   
     </div>
     
