--- a/views/search.ejs
+++ b/views/search.ejs
@@ -32,7 +32,9 @@
             			</div>
             			<div class='col-sm-4'></div>
             		</div>
+            		<button class='col-sm-4 btn btn-success btn-block' onclick='location.href="/randomGenerator";'>RANDOM GAME</button>
             	</form>
+            	
             </div>
             </br>
         </div>
