--- a/public/app.css
+++ b/public/app.css
@@ -18,8 +18,8 @@
   padding: 60px;
   text-align: center;
   background: #CC5500;
-  color: #edf6ff;
-  opacity: 0.90;
+  color: #e0f1ff;
+  opacity: 0.95;
 }
 
 /* Add a black background color to the top navigation */
