--- a/views/user.ejs
+++ b/views/user.ejs
@@ -31,7 +31,6 @@
                     
                     <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
 
-
                 </div>
                 <div class='col-sm-4'></div>
                 </div>
@@ -43,10 +42,9 @@
                     <p>Last Name: <%=lastname%></p>
                     <p>Username: <%=user%></p>
                     <p>Password: <%=password%></p>
+                    <p>Money: <%=userMoney%></p>
                 </strong>
                 
-               
-
             </div>
             </br>
         </div>
