--- a/views/user.ejs
+++ b/views/user.ejs
@@ -22,7 +22,7 @@
                     
                 <div class='form-group row'>
                 <div class='col-sm-3'></div>
-                <div class='col-sm-6'>
+                <div class='col-sm-7'>
 
                     <!--<a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>-->
                     <a type="button" class="text-light btn btn-warning" href="/cart" >Your items!</a>
@@ -30,6 +30,8 @@
                     <a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>
                     
                     <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
+                    
+                    <a type="button" class="text-light btn btn-warning"  href="/myGames" >Purchase History</a>
 
                 </div>
                 <div class='col-sm-4'></div>
