--- a/views/create_account.ejs
+++ b/views/create_account.ejs
@@ -2,11 +2,11 @@
 
 <div>
     <div class="header">
-        <h1 style='font-size: 60px'>Create New Account</h1>
+        <h1 style='font-size: 60px'>Video Game Store</h1>
     </div>
     <div class="topnav">
       <a href = "/">Home</a>
-      <a href = "/create_account" id = "currentPage">Create Account</a>
+      <a href = "/create_account" id = "currentPage"><strong>Create Account</strong></a>
       <a href = "/login">Login</a>
     </div>   
 </div>
