--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,8 +7,12 @@
         </div>
         </div>
         <div class="topnav">
-            <a href = "/" id = "currentPage">Home</a>
-        </div>   
+        <a href = "/" id = "currentPage">Home</a>
+        <a href="/user">User Account</a>
+        <a href="/search">Search</a>
+        <a href="/cart">Cart</a>
+        <a href="/logout">Log Out</a>
+    </div>  
     </div>
     
     <div class='container'>
@@ -18,7 +22,13 @@
                     <p>Edit your account credentials.</p>    
                 </strong>
                 
-                <form action='/editInfo?_method=PUT' method='POST'>
+                <form action='/users/<%=userId%>?_method=PUT' method='POST'>
+				<div class='form-group row'>
+					<label for='firstname' class='col-sm-4 col-form-label'>User ID Num</label>
+					<div class='col-sm-4'>
+						<input type='text' class='form-control' id='userId' name='userId' placeholder='<%=userId%>' disabled>
+					</div>
+				</div>
 				<div class='form-group row'>
 					<label for='firstname' class='col-sm-4 col-form-label'>FIRST NAME</label>
 					<div class='col-sm-4'>
@@ -40,11 +50,7 @@
 				<div class='form-group row'>
 					<label for='password' class='col-sm-4 col-form-label'>PASSWORD</label>
 					<div class='col-sm-4'>
-
-						<!--<input type='text' class='form-control' id='password' name='password' placeholder='hidden' required>-->
-
-						<input type='text' class='form-control' id='password' name='password' placeholder='<%=muser.password%>' required>
-
+						<input type='text' class='form-control' id='password' name='password' placeholder='<%=password%>' disabled>
 					</div>
 				</div>
 				
