--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,14 +2,13 @@
 
 <div>
     <div class="header">
-        <h1 style='font-size: 60px'>Login</h1>
+        <h1 style='font-size: 60px'>Video Game Store</h1>
     </div>
     <div class="topnav">
       <a href = "/" >Home</a>
       <a href = "/create_account">Create Account</a>
-      <a href = "/login">Login</a>
-      <a href = "/search">Search</a>
-
+      <a href = "/login"><strong>Login</strong></a>
+      
     </div>   
 </div>
 
