--- a/views/search.ejs
+++ b/views/search.ejs
@@ -3,37 +3,53 @@
     <div>
         <div class="header">
             <h1 style='font-size: 60px'>Video Game Store</b></h1>
+            <h4>Signed in as <%=user%></h4>
         </div>
-        <div class="topnav">
-            <a href = "/" id = "currentPage">Home</a>
-            <a href="/user">User Account</a>
-            <a href = "/search">Search</a>
-            <a href = "/cart">Cart</a>
-            <a href="/logout">Log Out</a>
-        </div>   
+            <div class="topnav">
+                <a href = "/">Home</a>
+                <a href="/user"><strong>User Account</strong></a>
+                <a href = "/search">Search</a>
+                 <a href="/gameList">Game List</a>
+                <a href = "/cart">Cart</a>
+                <a href="/logout">Log Out</a>
+        </div>
     </div>
-
+    
     <div class='container'>
         <div class='jumbotron'>
             <div align='center'>
-                <form action='/productDetail' method='GET'>
-            		<div class='form-group row'>
-            			<label for='title' class='col-sm-4 col-form-label'>Title</label>
-            			<div class='col-sm-4'>
-            				<input type='text' class='form-control' id='title' name='title' placeholder='Game Title' required>
-            			</div>
-            		</div>
-            		<div class='form-group row'>
-            			<div class='col-sm-4'></div>
-            			<div class='col-sm-4'>
-            				<button class='btn btn-primary'>Search</button>
-            			</div>
-            			<div class='col-sm-4'></div>
-            		</div>
-            	</form>
+                <strong>
+                    
+                <div class='form-group row'>
+                <div class='col-sm-3'></div>
+                <div class='col-sm-7'>
+
+                    <!--<a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>-->
+                    <a type="button" class="text-light btn btn-warning" href="/cart" >Your items!</a>
+
+                    <a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>
+                    
+                    <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
+                    
+                    <a type="button" class="text-light btn btn-warning"  href="/myGames" >Purchase History</a>
+
+                </div>
+                <div class='col-sm-4'></div>
+                </div>
+                    
+                    <p>Your information:</p>
+                    <br>
+
+                    <p>First Name: <%=firstname%></p>
+                    <p>Last Name: <%=lastname%></p>
+                    <p>Username: <%=user%></p>
+                    <p>Password: <%=password%></p>
+                    <p>Money: <%=userMoney%></p>
+                </strong>
+                
             </div>
             </br>
         </div>
     </div>
-		
+    
 <%- include ('partials/footer'); -%>
