--- a/views/user.ejs
+++ b/views/user.ejs
@@ -2,15 +2,17 @@
 
     <div>
         <div class="header">
-            <h1 style='font-size: 60px'>User Account</b></h1>
+            <h1 style='font-size: 60px'>Video Game Store</b></h1>
             <h4>Signed in as <%=user%></h4>
         </div>
+            <div class="topnav">
+                <a href = "/">Home</a>
+                <a href="/user"><strong>User Account</strong></a>
+                <a href = "/search">Search</a>
+                 <a href="/gameList">Game List</a>
+                <a href = "/cart">Cart</a>
+                <a href="/logout">Log Out</a>
         </div>
-        <div class="topnav">
-            <a href = "/" id = "currentPage">Home</a>
-            <a href = "/create_account">Create Account</a>
-            <a href="/logout">Log Out</a>
-        </div>   
     </div>
     
     <div class='container'>
@@ -18,9 +20,9 @@
             <div align='center'>
                 <strong>
                     
-                    <div class='form-group row'>
+                <div class='form-group row'>
                 <div class='col-sm-3'></div>
-                <div class='col-sm-6'>
+                <div class='col-sm-7'>
 
                     <!--<a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>-->
                     <a type="button" class="text-light btn btn-warning" href="/cart" >Your items!</a>
@@ -28,7 +30,8 @@
                     <a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>
                     
                     <a type="button" class="text-light btn btn-warning"  href="/edit" >Edit Account</a>
-
+                    
+                    <a type="button" class="text-light btn btn-warning"  href="/myGames" >Purchase History</a>
 
                 </div>
                 <div class='col-sm-4'></div>
@@ -40,11 +43,10 @@
                     <p>First Name: <%=firstname%></p>
                     <p>Last Name: <%=lastname%></p>
                     <p>Username: <%=user%></p>
-                    <p>Password: hidden</p>
+                    <p>Password: <%=password%></p>
+                    <p>Money: <%=userMoney%></p>
                 </strong>
                 
-               
-
             </div>
             </br>
         </div>
