--- a/views/myGames.ejs
+++ b/views/myGames.ejs
@@ -29,10 +29,10 @@
             <figure id="results">
                 
             <img src='<%=games.image%>' width='200' id="images">
-            <h5>Game Name: <%=games.name%></h5>
-            <h5>Year Made: <%=games.yearMade%></h5>
-            <h5>Genre: <%=games.genre%></h5>
-            <h5>Summary: <%=games.summary%></h5>
+            <h5><strong>Game Name: </strong><%=games.name%></h5>
+            <h5><strong>Year Made: </strong><%=games.yearMade%></h5>
+            <h5><strong>Genre: </strong><%=games.genre%></h5>
+            <h5><strong>Summary: </strong><%=games.summary%></h5>
             
             <br>
             
