--- a/views/gameList.ejs
+++ b/views/gameList.ejs
@@ -29,12 +29,12 @@
             <figure id="results">
                 
             <img src='<%=games.image%>' width='200' id="images">
-            <h5>Game Name: <%=games.name%></h5>
-            <h5>Year Made: <%=games.yearMade%></h5>
-            <h5>Genre: <%=games.genre%></h5>
-            <h5>Summary: <%=games.summary%></h5>
-            <h5>Price: $<%=games.gamePrice%></h5>
-            <h5>Quantity: <%=games.quantity%></h5>
+            <h5><strong>Game Name: </strong><%=games.name%></h5>
+            <h5><strong>Year Made: </strong><%=games.yearMade%></h5>
+            <h5><strong>Genre: </strong><%=games.genre%></h5>
+            <h5><strong>Summary: </strong><%=games.summary%></h5>
+            <h5><strong>Price: </strong>$<%=games.gamePrice%></h5>
+            <h5><strong>Quantity: </strong><%=games.quantity%></h5>
             
             <br>
             
