--- a/views/user.ejs
+++ b/views/user.ejs
@@ -22,10 +22,10 @@
                     
                 <div class='form-group row'>
                 <div class='col-sm-3'></div>
-                <div class='col-sm-7'>
+                <div class='col-sm-8'>
 
                     <!--<a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>-->
-                    <a type="button" class="text-light btn btn-warning" href="/cart" >Your items!</a>
+                    <a type="button" class="text-light btn btn-warning" href="/cart" >Your cart!</a>
 
                     <a type="button" class="text-light btn btn-warning"  href="/search" >Search for games!</a>
                     
